--- a/css/solicitacoes.css
+++ b/css/solicitacoes.css
@@ -29,8 +29,13 @@ table {
 h1 {
     margin: 2.8rem 0 1.68rem 10rem;
 }
+
 h6 {
     margin: .7666666667rem 10.46rem 0;
+}
+
+h3 {
+    margin: 1.9466666667rem 0 1.168rem 10rem;
 }
 
 input:not([type]), 
@@ -75,6 +80,7 @@ section#top nav ul li a{
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+
 .input-field>label {
     color: white;
 }
